test_suite/tests/ui/with-variant/skip_de_whole_variant.stderr
error: variant `Unit` cannot have both #[serde(deserialize_with)] and #[serde(skip_deserializing)]
 --> tests/ui/with-variant/skip_de_whole_variant.rs:5:5
  |
3 |   #[derive(Deserialize)]
  |            ----------- in this derive macro expansion
4 |   enum Enum {
5 | /     #[serde(deserialize_with = "deserialize_some_unit_variant")]
6 | |     #[serde(skip_deserializing)]
7 | |     Unit,
  | |________^
  |
  = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
